--- a/package.json
+++ b/package.json
@@ -10,21 +10,30 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.6",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
+    "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
+    "file-saver": "^2.0.5",
+    "firebase": "^11.5.0",
+    "jspdf": "^3.0.1",
     "rxjs": "~7.8.0",
+    "sortablejs": "^1.15.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.3",
+    "@angular-devkit/build-angular": "^19.2.0",
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
